# docs/swagger.yaml
@@ -715,22 +715,42 @@ paths:
       - Feeds
   /api/feeds/export:
     get:
-      description: Returns a CSV list of all feeds, or only those the user is subscribed
-        to.
+      description: Generates an OPML file containing all current feeds and returns
+        it as a downloadable file.
       parameters:
       - description: Only subscribed feeds
         in: query
         name: subscribedOnly
         type: boolean
       produces:
-      - text/csv
+      - application/xml
       responses:
         "200":
-          description: List of feeds
+          description: OPML file
           schema:
             type: file
         "400":
           description: Bad Request
+          schema:
+            type: string
+        "401":
+          description: Unauthorized
+          schema:
+            type: string
+        "403":
+          description: Forbidden
+          schema:
+            type: string
+        "404":
+          description: Not Found
+          schema:
+            type: string
+        "409":
+          description: Conflict
+          schema:
+            type: string
+        "429":
+          description: Too Many Requests
           schema:
             type: string
         "500":
@@ -739,7 +759,7 @@ paths:
             type: string
       security:
       - BearerAuth: []
-      summary: Export feeds
+      summary: Export feeds as OPML
       tags:
       - Feeds
   /api/items:
